# command-line-interface

./: CMakeLists.txt  README.md  main.cpp
Commands/: Batch.cpp  Batch.h  Command.cpp  Command.h  Commands.h  Date.cpp  Date.h  Echo.cpp  Echo.h  Head.cpp  Head.h  MultilineCommand.cpp  MultilineCommand.h  Prompt.cpp  Prompt.h  Rm.cpp  Rm.h  SingleLineCommand.cpp  SingleLineCommand.h  Time.cpp  Time.h  Touch.cpp  Touch.h  Tr.cpp  Tr.h  Truncate.cpp  Truncate.h  Wc.cpp  Wc.h
Core/: CommandExceptions.cpp  CommandExceptions.h  Controller.cpp  Controller.h  FileExceptions.cpp  FileExceptions.h  Parser.cpp  Parser.h  Reader.cpp  Reader.h
InputProcessing/: ISFile.cpp  ISFile.h  ISString.cpp  ISString.h  InputStream.cpp  InputStream.h
